05_Service/external-svc-externalname.yml
apiVersion: v1
kind: Service
metadata:
  name: external-service
spec:
  type: ExternalName
  externalName: api.sangmile.com
  ports:
  - port: 80
