05_Service/kumile-named-port-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: kumile-named-port
spec:
  ports:
  - name: http
    port: 80
    targetPort: http
  selector:
    app: kumile-named-port
