05_Service/kumile-svc-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: kumile-loadbalancer
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: kumile
