05_Service/kumile-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: kumile
spec:
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: kumile
