05_Service/kumile-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kumile
spec:
  rules:
  - host: kumile.sangmile.site
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: kumile-nodeport
            port:
              number: 80
